<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/bk_pontos">


    <LinearLayout
        android:id="@+id/times"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_nos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:fontFamily="@font/anton_regular"
            android:textSize="50sp"
            android:text="@string/pontos_nos" />

        <TextView
            android:id="@+id/txt_eles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:fontFamily="@font/anton_regular"
            android:textSize="50sp"
            android:text="@string/pontos_eles" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/somas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/times">

        <ImageView
            android:id="@+id/btn_soma_nos"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_mais" />

        <ImageView
            android:id="@+id/btn_soma_eles"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_mais" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/pontos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/somas">

        <TextView
            android:id="@+id/txt_pontos_nos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anton_regular"
            android:textSize="130sp"
            android:textColor="@color/white"
            android:text="12"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txt_pontos_eles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anton_regular"
            android:textSize="130sp"
            android:textColor="@color/white"
            android:text="12"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/subs"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/pontos">

        <ImageView
            android:id="@+id/btn_sub_nos"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_menos" />

        <ImageView
            android:id="@+id/btn_sub_eles"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_menos" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyt_btn_truco"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/subs">

        <ImageView
            android:id="@+id/btn_truco"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/ic_truco" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/lyt_vitorias"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lyt_btn_truco">

        <TextView
            android:id="@+id/txt_vit_nos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:fontFamily="@font/anton_regular"
            android:text="@string/vitorias_nos" />

        <Button
            android:id="@+id/btn_zerar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/Zerar" />

        <TextView
            android:id="@+id/txt_vit_eles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/anton_regular"
            android:text="@string/vitorias_eles" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/propaganda"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent">

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
